# deleteceipt

./: .gitignore  LICENSE  NOTICE  README.md  docs.html  donate.html  index.html  pyproject.toml
.github/workflows/: ci.yml
compliance-checkers/gdpr/: operator.yaml  pyproject.toml  verify_assessment.py
compliance-checkers/gdpr/checker/: __init__.py  cli.py  engine.py  report.py  verticals.py
compliance-checkers/gdpr/controls/: audit_log_integrity.yaml  backup_archive.yaml  cache_invalidation.yaml  cryptographic_erasure.yaml  deletion_receipt_issuance.yaml  deletion_testing.yaml  federated_systems.yaml  legal_hold_procedures.yaml  logs_observability.yaml  message_queues.yaml  ml_models.yaml  primary_storage.yaml  search_indexes.yaml  third_party_processors.yaml
compliance-checkers/gdpr/dashboard/: __init__.py  app.py  config.py  runner.py
compliance-checkers/gdpr/tests/: __init__.py  test_cli.py  test_dashboard.py  test_engine.py  test_report.py  test_verticals.py
compliance-checkers/human-oversight/: README.md  checker.py  checks.py  dashboard.html  reporter.py  requirements.txt
docs/: architecture.md  cryptographic-assurance.md  deletion-first-architecture.md  gdpr-compliance-checker.md  legal-foundation.md  open-source-candidates.md  showcase-service.md  why-deletion-is-hard.md
examples/: fastapi_integration.py  web_demo.html
landing-pages/gdpr/: index.html
src/deleteceipt/: __init__.py  audit.py  cli.py  crypto_shred.py  ecdsa_receipt.py  enterprise.py  inventory.py  legal_hold.py  receipt.py  reconcile.py  renderer.py  scheduler.py  tmpfs.py
tests/: test_audit.py  test_cli.py  test_crypto_shred.py  test_ecdsa_receipt.py  test_enterprise.py  test_inventory.py  test_legal_hold.py  test_receipt.py  test_reconcile.py  test_renderer.py  test_scheduler.py  test_tmpfs.py
