[project]
name = "gdpr-compliance-checker"
version = "0.1.0"
description = "GDPR right-to-erasure compliance checker with cryptographic receipt verification"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
verify-assessment = "checker.cli:main"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["checker*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
